--- a/package.json
+++ b/package.json
@@ -9,14 +9,19 @@
     "aphrodite": "^2.4.0",
     "axios": "^0.20.0",
     "bootstrap": "^4.5.2",
+    "jquery": "^1.9.1",
+    "mdbreact": "^4.27.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
+    "react-bootstrap-toggle": "^2.3.2",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "react-spinners": "^0.9.0",
+    "react-toggle": "^4.1.1",
     "simple-flexbox": "^2.3.2",
-    "tachyons": "^4.12.0"
+    "tachyons": "^4.12.0",
+    "typescript": "^4.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
