--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -28,7 +28,7 @@ jobs:
     - name: Update docker image
       run: sudo docker build . -t localhost:32000/work-tools:registry
     - name: Push docker image to kubernetes registry
-      run: sudo docker push localhost:32000/work-tools
+      run: sudo docker push localhost:32000/work-tools:registry
     - name: Deploy new image to kubernetes pod
       run: POD_NAME=$(command sudo microk8s kubectl get pods |grep -o '^\S*'|grep work-tools) && sudo microk8s kubectl delete pod $POD_NAME
     - name: Delete old docker images
