--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-scripts": "3.4.3",
     "react-spinners": "^0.9.0",
     "react-spring": "^8.0.27",
+    "react-swipeable-views": "^0.13.9",
     "react-toggle": "^4.1.1",
     "simple-flexbox": "^2.3.2",
     "tachyons": "^4.12.0",
