--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "beautiful-react-hooks": "^0.31.0",
     "bootstrap": "^4.5.2",
     "jquery": "^1.9.1",
+    "lscache": "^1.3.0",
     "mdbreact": "^4.27.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
