--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "beautiful-react-hooks": "^0.31.0",
     "bootstrap": "^4.5.2",
     "caniuse-lite": "^1.0.30001248",
+    "firebase": "^9.5.0",
     "jquery": "^1.9.1",
     "lscache": "^1.3.0",
     "mdbreact": "^4.27.0",
