--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -29,7 +29,7 @@ jobs:
     - uses: actions/checkout@v2
     # Runs a single command using the runners shelltwo
     - name: Update docker image
-      run: sudo docker build . -t localhost:32000/work-tools:registry
+      run: sudo docker build . -t localhost:32000/work-tools:registry --pull --no-cache
     - name: Push docker image to kubernetes registry
       run: sudo docker push localhost:32000/work-tools:registry
     - name: Deploy new image to kubernetes pod
